Fix some warnings compilations on Microsoft.Toolkit.Mvvm Fix property IsChecked on UnconnectedPin

--- a/NetPrintsEditor/Controls/PinControl.xaml
+++ b/NetPrintsEditor/Controls/PinControl.xaml
@@ -91,7 +91,7 @@
                 SelectedItem="{Binding UnconnectedValue}"
                 ItemsSource="{Binding PossibleEnumNames}" />
 
-            <CheckBox IsChecked="{Binding UnconnectedValue, Mode=TwoWay}"
+            <CheckBox IsChecked="{Binding CheckedUnconnectedValue, Mode=TwoWay}"
                 MouseUp="OnClearUnconnectedValue"
                 Visibility="{Binding ShowBooleanValue, Converter={StaticResource ResourceKey=BoolToVis}}" />
         </Grid>
