--- a/NetPrintsEditor/App.xaml
+++ b/NetPrintsEditor/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:NetPrintsEditor"
-             StartupUri="MainEditorWindow.xaml"
-             DispatcherUnhandledException="Application_DispatcherUnhandledException">
+             StartupUri="MainEditorWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
